0.23:
 * Hiding filenames no longer hides directory names.
 * Fixed --stop-on-idle option.

0.22:
 * Fixed Mercurial log order.

0.21b:
 * Fixed windows build.

0.21: 
 * Some documentation fixes.

0.20:
 * Added bloom effect (turn off with --disable-bloom).
 * Added support for Mercurial (thanks to Justin Love for gource.style).
 * --start-position option now works in combination with --disable-progress.

0.19:
 * Use time_t instead of long for timestamps.

0.18:
 * Fixed camera movement while the simulation is paused.

0.17:
 * Show correct month for CVS logs.
 * Added time scaling (Bitshifter).

0.16:
 * Added --hide-dirnames option.
 * Added --user-scale option.
 * Added --date-format option (Pat Notz).
 * Fix bug when encountering long log lines.
 * Fixed incorrect parsing of trivial merges.
 * Fixed building issues on OSX.

0.15:
 * Added PPM output support for creating videos (Johannes Schindelin).
 * Added experimental Apache combined access log support (--log-format apache).
 * Added --stop-position and --stop-on-idle options (useful for making videos).
 * Added --max-file-lag option to limit how long after a commit file changes can take to appear.
 * Added --no-renames to the git log command as they don't display correctly.
 * Added --max-user-speed and --user-friction as options.
 * Now builds on OSX Leopard (with the required libaries installed).
 * Caught raw exception from replace_invalid().
 * Added CXXFLAGS. You may want to override the default (eg CXXFLAGS=-O3 ./configure).

0.14:
 * Updated SVN instructions.

0.13:
 * Removed single quotes from log command (fixes running gource --git-log-command in back ticks)
 * Added SVN instructions.
 * Fixed manpage hyphens.

0.12:
 * Added --enable-ttf-font-dir=DIR option to configure (to specify the ttf-freefont directory).
 * UTF-8 support using UTF8-CPP (http://utfcpp.sourceforge.net/).
 * Changed the git log command (see --git-log-command) to require less work to parse.