@@ -23,10 +23,16 @@ Set the window size. If \-f is also supplied, will attempt to set the video mode
 Begin at some position in the log (between 0.0 and 1.0).
 .TP
 \fB    \-\-stop\-position  POSITION\fR
-Stop at some position. Use 1.0 to stop at the end of the log.
+Stop (exit) at some position in the log (does not work with STDIN).
 .TP
 \fB    \-\-stop\-on\-idle\fR
 Stop on break in activity. May be combined with \-\-stop\-position.
+.TP
+\fB    \-\-stop\-at\-end\fR
+Stop (exit) at the end of the log / stream.
+.TP
+\fB    \-\-loop\fR
+Loop back to the start of the log when the end is reached.
 .TP
 \fB\-a, \-\-auto\-skip\-seconds SECONDS\fR
 Automatically skip to next entry if nothing happens for a specified number of seconds.
@@ -45,9 +51,6 @@ Elasticity of nodes.
 .TP
 \fB\-b, \-\-background FFFFFF\fR
 Background colour in hex.
-.TP
-\fB\-\-loop\fR
-Loop back to the start of the log when the end is reached.
 .TP
 \fB\-\-date\-format FORMAT\fR
 Specify display date string (strftime format).
@@ -201,10 +204,10 @@ colour    - A colour for the file in hex (FFFFFF) format. Optional.
 You can create a video of Gource using the \-\-output\-ppm\-stream option. This creates an uncompressed sequence of
 screenshots in PPM format which can then be processed by another program (such as ffmpeg) to produce a video file.
 
-The below command line will create a video at 60fps in x264 format (assumes you have ffmpeg with x264 support):
+The below command line will create a video at 60fps in x264 format, stopping at the end of the log (assumes you have ffmpeg with x264 support):
 
 .ti 10
-gource \-\-output-ppm-stream \- | ffmpeg \-y \-b 3000K \-r 60 \-f image2pipe \-vcodec ppm \-i \- \-vcodec libx264 gource.mp4
+gource \-\-stop\-at\-end \-\-output\-ppm\-stream \- | ffmpeg \-y \-b 3000K \-r 60 \-f image2pipe \-vcodec ppm \-i \- \-vcodec libx264 gource.mp4
 
 .SH INTERFACE
 The time shown in the top left of the screen is set initially from the first log entry read and is incremented according to the simulation speed (\-\-seconds\-per\-day).
